syntax = "proto3";
package RouteHandler;

option csharp_namespace = "RouteHandler";

service RouteService {
  rpc SendRoute (RouteRequest) returns (RouteResponse);
}

message RouteRequest {
  int32 route_id = 1;
}

message RouteResponse {
  bool success = 1;
}
